--- a/services/nginx/conf.d/projects.conf
+++ b/services/nginx/conf.d/projects.conf
@@ -58,3 +58,31 @@ server {
     listen 80;
     listen [::]:80;
 }
+
+server {
+
+    server_name magento234.local;
+    index index.php;
+
+    set $MAGE_ROOT /projects/magento234;
+    set $MAGE_MODE production;
+
+    # root /projects/magento234;
+
+    access_log /var/log/nginx/magento234-access.log;
+    error_log /var/log/nginx/magento234-error.log;
+
+    include /projects/magento234/nginx.conf.sample;
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass phpfpm:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    listen 80;
+    listen [::]:80;
+}
