--- a/services/nginx/conf.d/projects.conf
+++ b/services/nginx/conf.d/projects.conf
@@ -86,3 +86,31 @@ server {
     listen 80;
     listen [::]:80;
 }
+
+server {
+
+    server_name bhavesh.px.seepossible.link;
+    index index.php;
+
+    set $MAGE_ROOT /projects/projectx;
+    set $MAGE_MODE production;
+
+    # root /projects/projectx;
+
+    access_log /var/log/nginx/projectx-access.log;
+    error_log /var/log/nginx/projectx-error.log;
+
+    include /projects/projectx/nginx.conf.sample;
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass phpfpm:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    listen 80;
+    listen [::]:80;
+}
