--- a/services/php/74/Dockerfile
+++ b/services/php/74/Dockerfile
@@ -4,3 +4,4 @@ RUN chmod +x /usr/local/bin/install-php-extensions
 RUN install-php-extensions mysqli mcrypt bcmath curl intl json mbstring pdo_mysql readline session soap zip gd 
 RUN install-php-extensions xsl sockets
 RUN apt-get update && apt-get upgrade -y
+RUN apt install git -y
