--- a/services/docker-sync.yml
+++ b/services/docker-sync.yml
@@ -9,6 +9,13 @@ options:
 
 syncs:
 
+  project-other-sync:
+    notify_terminal: true
+    src: './php/other'
+    sync_strategy: 'unison'
+    sync_userid: '33'
+    max_attempt: 10
+
   project-magento243-sync:
     notify_terminal: true
     src: '../projects/magento243'
@@ -44,6 +51,22 @@ syncs:
   project-magento234-sync:
     notify_terminal: true
     src: '../projects/magento234'
+    sync_strategy: 'unison'
+    sync_excludes: [
+      '.git',
+      '.gitignore',
+      'node_modules',
+      'var/cache',
+      'var/page_cache',
+      'var/session',
+      '.DS_Store'
+    ]
+    sync_userid: '33'
+    max_attempt: 10
+    
+  project-projectx-sync:
+    notify_terminal: true
+    src: '../projects/projectx'
     sync_strategy: 'unison'
     sync_excludes: [
       '.git',
