--- a/services/elasticsearch/docker-compose.yml
+++ b/services/elasticsearch/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - 9200:9200
       - 9300:9300
     volumes:
-      - /Users/bhavesh/Documents/docker-server/services/elasticsearch/data:/usr/share/elasticsearch/data
+      - ./data:/usr/share/elasticsearch/data
     networks:
       - elastic
     
