--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - 443:443
     mem_limit: 2g
     volumes:
-      - project-magento243-sync:/projects/magento243:nocopy,delegated
-      - project-magento243p1-sync:/projects/magento243p1:nocopy,delegated
-      - project-magento234-sync:/projects/magento234:nocopy,delegated
+      # - project-magento243-sync:/projects/magento243:nocopy,delegated
+      # - project-magento243p1-sync:/projects/magento243p1:nocopy,delegated
+      # - project-magento234-sync:/projects/magento234:nocopy,delegated
       - project-projectx-sync:/projects/projectx:nocopy,delegated
       - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/magento2-cors.conf:/etc/nginx/magento2-cors.conf
@@ -34,23 +34,23 @@ services:
       dockerfile: Dockerfile
     volumes:
       - project-other-sync:/other:nocopy,delegated
-      - project-magento243-sync:/projects/magento243:nocopy,delegated
-      - project-magento243p1-sync:/projects/magento243p1:nocopy,delegated
-      - project-magento234-sync:/projects/magento234:nocopy,delegated
+      # - project-magento243-sync:/projects/magento243:nocopy,delegated
+      # - project-magento243p1-sync:/projects/magento243p1:nocopy,delegated
+      # - project-magento234-sync:/projects/magento234:nocopy,delegated
       - project-projectx-sync:/projects/projectx:nocopy,delegated
 
 volumes:
   project-other-sync:
     external: true
 
-  project-magento243-sync:
-    external: true
+  # project-magento243-sync:
+  #   external: true
 
-  project-magento243p1-sync:
-    external: true
+  # project-magento243p1-sync:
+  #   external: true
 
-  project-magento234-sync:
-    external: true
+  # project-magento234-sync:
+  #   external: true
 
   project-projectx-sync:
     external: true
