--- a/services/docker-sync.yml
+++ b/services/docker-sync.yml
@@ -16,53 +16,53 @@ syncs:
     sync_userid: '33'
     max_attempt: 10
 
-  project-magento243-sync:
-    notify_terminal: true
-    src: '../projects/magento243'
-    sync_strategy: 'unison'
-    sync_excludes: [
-      '.git',
-      '.gitignore',
-      'node_modules',
-      'var/cache',
-      'var/page_cache',
-      'var/session',
-      '.DS_Store'
-    ]
-    sync_userid: '33'
-    max_attempt: 10
+  # project-magento243-sync:
+  #   notify_terminal: true
+  #   src: '../projects/magento243'
+  #   sync_strategy: 'unison'
+  #   sync_excludes: [
+  #     '.git',
+  #     '.gitignore',
+  #     'node_modules',
+  #     'var/cache',
+  #     'var/page_cache',
+  #     'var/session',
+  #     '.DS_Store'
+  #   ]
+  #   sync_userid: '33'
+  #   max_attempt: 10
     
-  project-magento243p1-sync:
-    notify_terminal: true
-    src: '../projects/magento243p1'
-    sync_strategy: 'unison'
-    sync_excludes: [
-      '.git',
-      '.gitignore',
-      'node_modules',
-      'var/cache',
-      'var/page_cache',
-      'var/session',
-      '.DS_Store'
-    ]
-    sync_userid: '33'
-    max_attempt: 10
+  # project-magento243p1-sync:
+  #   notify_terminal: true
+  #   src: '../projects/magento243p1'
+  #   sync_strategy: 'unison'
+  #   sync_excludes: [
+  #     '.git',
+  #     '.gitignore',
+  #     'node_modules',
+  #     'var/cache',
+  #     'var/page_cache',
+  #     'var/session',
+  #     '.DS_Store'
+  #   ]
+  #   sync_userid: '33'
+  #   max_attempt: 10
     
-  project-magento234-sync:
-    notify_terminal: true
-    src: '../projects/magento234'
-    sync_strategy: 'unison'
-    sync_excludes: [
-      '.git',
-      '.gitignore',
-      'node_modules',
-      'var/cache',
-      'var/page_cache',
-      'var/session',
-      '.DS_Store'
-    ]
-    sync_userid: '33'
-    max_attempt: 10
+  # project-magento234-sync:
+  #   notify_terminal: true
+  #   src: '../projects/magento234'
+  #   sync_strategy: 'unison'
+  #   sync_excludes: [
+  #     '.git',
+  #     '.gitignore',
+  #     'node_modules',
+  #     'var/cache',
+  #     'var/page_cache',
+  #     'var/session',
+  #     '.DS_Store'
+  #   ]
+  #   sync_userid: '33'
+  #   max_attempt: 10
     
   project-projectx-sync:
     notify_terminal: true
